test/scc/ext/tm/semantic-errors/006.t
void test() _Transaction_safe
{
    volatile int** a;
    **a;
}